# hcudnn

./: README.md  hcudnn.cabal  stack.yaml
src/Foreign/CUDA/: CuDNN.hsc
