name:                hcudnn
version:             0.1.0.0
synopsis:            Haskell FFI bindings to the CuDNN library.
description:         Please see README.md
homepage:            https://github.com/alexisVallet/hcudnn
license:             BSD3
license-file:        LICENSE
author:              Alexis Vallet
maintainer:          alexis.vallet@gmail.com
-- copyright:           
category:            Foreign
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foreign.CUDA.CuDNN
  build-depends:       base >= 4.7 && < 5,
                       cuda >= 0.6.5
  default-language:    Haskell2010
  extra-libraries:     cudnn

test-suite hcudnn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hcudnn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexisVallet/hcudnn
